--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@openzeppelin/contracts": "^4.4.0",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
+    "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
     "hardhat": "^2.7.1",
